--- a/lib/analysis_options.yaml
+++ b/lib/analysis_options.yaml
@@ -46,3 +46,10 @@ linter:
     # When we can do it in programming, make it true
     # https://dart-lang.github.io/linter/lints/sort_pub_dependencies.html
     sort_pub_dependencies: false
+    # use json convert
+    # https://dart-lang.github.io/linter/lints/avoid_annotating_with_dynamic.html
+    avoid_annotating_with_dynamic: false
+      # already have a warning
+      # https://dart-lang.github.io/linter/lints/prefer_final_parameters.html
+      # incompatible with: https://dart-lang.github.io/linter/lints/avoid_final_parameters.html
+      prefer_final_parameters: false
