--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,7 +17,7 @@ dev_dependencies:
     sdk: flutter
 
   dart_lint:
-    path: /Users/futoshi/workspace/flutter/dart_lint
+    path: ../
 
 flutter:
   uses-material-design: true
