--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,9 @@
 name: dart_lint
-description: A new Flutter package.
-version: 0.0.1
-author:
+description: Dart Lint
+version: 2.0.3
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.1.0 <4.0.0'
 
 dependencies:
   flutter:
@@ -15,4 +14,3 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
-
