--- a/lib/analysis_options.yaml
+++ b/lib/analysis_options.yaml
@@ -54,3 +54,15 @@ linter:
     # https://dart-lang.github.io/linter/lints/prefer_final_parameters.html
     # incompatible with: https://dart-lang.github.io/linter/lints/avoid_final_parameters.html
     prefer_final_parameters: false
+    # 明示的に引数を指定したい時があるため
+    # https://dart.dev/tools/linter-rules/avoid_redundant_argument_values
+    avoid_redundant_argument_values: false
+    # DOCコメントでTODOを書いてもワーニングが出るため。また個人開発で強くスタイルを統一する必要がないため
+    # https://dart.dev/tools/linter-rules/flutter_style_todos
+    flutter_style_todos: false
+    # 1つのメンバーのみの抽象クラスを定義することもあるため。
+    # https://dart.dev/tools/linter-rules/one_member_abstracts
+    one_member_abstracts: false
+    # final _name = name ?? hoge.nameのように宣言したいケースが存在するため
+    # https://dart.dev/tools/linter-rules/no_leading_underscores_for_local_identifiers
+    no_leading_underscores_for_local_identifiers: false
