--- a/lib/analysis_options.yaml
+++ b/lib/analysis_options.yaml
@@ -89,3 +89,9 @@ linter:
     # 対応が大変なため & ここまでチェックする必要を感じないため
     # https://dart.dev/tools/linter-rules/unsafe_variance
     unsafe_variance: false
+    # コードが簡潔でわかりやすいため
+    # https://dart.dev/tools/linter-rules/always_put_control_body_on_new_line
+    always_put_control_body_on_new_line: false
+    # setter以外からプロパティを変更することもあるため
+    # https://dart.dev/tools/diagnostics/use_setters_to_change_properties
+    use_setters_to_change_properties: false
